--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,12 @@ __pycache__/
 *.py[cod]
 *$py.class
 
+*.terraform.lock.hcl
+*.terraform/
+*terraform.tfstate
+*terraform.tfstate.backup
+
+
 # C extensions
 *.so
 
